dbus: Correctly handle alias paths in lookup_collection

https://bugzilla.gnome.org/show_bug.cgi?id=756865